# RunOvmf

./: .gitignore  Makefile  OVMF_CODE.fd  README
esp/: HelloWorld.efi  Kernel.asm  Kernel.elf  Protocol.efi  ToyBoot.efi  main.c  memory
esp/EFI/Boot/: bootX64.efi
esp/ToyOs/: CMakeLists.txt  Kernel.c  Kernel.ld  Shell.c  Uefi.h  Video.c  Video.h
esp/ToyOs/Character/: Char.c
esp/ToyOs/Include/: AHCI.h  Acpi.h  Assert.h  Bool.h  BootConfig.h  Char.h  Color.h  GDT.h  Heap.h  IO.h  Interrupts.h  KbScanCodeTranslation.h  Kernel.h  KeyBoard.h  Memory32.h  Mouse.h  PCI.h  PIT.h  PagInit.h  PageFrameAllocator.h  PageMapIndexer.h  PageTableManager.h  Paging.h  Panic.h  PowerManage.h  Shell.h  Uefi.h  Video.h  VideoInit.h
esp/ToyOs/Src/: AHCI.c  Acpi.c  Assert.c  CMakeLists.txt  Char.c  IO.c  Kernel.c  Memory32.c  PCI.c  PageFrameAllocator.c  Panic.c  PciDescriptor.c  PowerManage.c  Shell.c  Video.c
esp/ToyOs/Src/GDT/: CMakeLists.txt  GDT.c  gdt  gdt.asm
esp/ToyOs/Src/Heap/: CMakeLists.txt  Heap.c
esp/ToyOs/Src/Interrupts/: CMakeLists.txt  InterruptHandler.c  Interrupts.c
esp/ToyOs/Src/Paging/: CMakeLists.txt  PageFrameAllocator.c  PageMapIndexer.c  PageTableManager.c  Paging.c
esp/ToyOs/Src/Scheduling/: CMakeLists.txt  PIT.c
esp/ToyOs/Src/UserInputs/: CMakeLists.txt  KbScanCodeTranslation.c  KeyBoard.c  Mouse.c
esp/ToyOs/font/: PsfInit.c  PsfInit.cpp  a.out
